--- a/public/sassFolder/input.scss
+++ b/public/sassFolder/input.scss
@@ -266,7 +266,7 @@ footer {
 .input-label {
     display: block;
     font-weight: bold;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 .input-field {
@@ -308,4 +308,16 @@ footer {
     border-radius: 1rem;
     border: 1px solid $secondary-color;
     box-sizing: border-box;
+}
+
+.individual-report-submit {
+    background-color: rgb(223, 223, 223);
+    margin-top: 1rem;
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+}
+
+.individual-report-submit:hover {
+    background-color: $alternative-white;
 }
