--- a/public/sassFolder/output.css
+++ b/public/sassFolder/output.css
@@ -235,7 +235,7 @@ footer {
 .input-label {
   display: block;
   font-weight: bold;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .input-field {
@@ -276,6 +276,18 @@ footer {
   border-radius: 1rem;
   border: 1px solid #333333;
   box-sizing: border-box;
+}
+
+.individual-report-submit {
+  background-color: rgb(223, 223, 223);
+  margin-top: 1rem;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+
+.individual-report-submit:hover {
+  background-color: #f9f9f9;
 }
 
 /*# sourceMappingURL=output.css.map */
