--- a/views/individualReport.ejs
+++ b/views/individualReport.ejs
@@ -4,6 +4,6 @@
     <label for="messageInput" class="input-label">Input:</label>
     <input type="text" id="messageInput" name="textInput" placeholder="Enter text here" class="input-field">
 </div>
-    <input type="submit" value="Submit">
+    <input type="submit" value="Submit" class="individual-report-submit">
 </form></div>
 <%- include('footer.ejs') %>
