--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,18 +5,18 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="icon" href="/favicon.ico">
 <header>
-    <% if (typeof userRoutes !== 'undefined') { %>
     <nav class="nav">
         <ul>
+    <% if (typeof userRoutes !== 'undefined') { %>
             <% for (let i = 0; i < userRoutes.length; i++) { %>
                 <li><a href="<%= userRoutes[i].path %>"><%= userRoutes[i].name %></a></li>
-            <% } %> else { %>
-                <li><a href="/login">Login</a></li>
             <% } %>
         <li><a href="/logout">Logout</a></li>
         <i class="fa fa-bars"></i>
-    </ul>
-    </nav>
-    <script src="/hamburgerMenu.js" type="module"></script>
+    <% } else { %>
+        <li><a href="/login">Login</a></li>
     <% } %>
+</ul>
+    <script src="/hamburgerMenu.js" type="module"></script>
+</nav>
 </header>
